--- a/airlines/index_tooltip.html
+++ b/airlines/index_tooltip.html
@@ -28,10 +28,7 @@ display: none;
 
 <h1>Airline Passenger Flows in 2014</h1>
 <h3>Top 20 Airports</h3>
-<div id="tooltip"></div>
-
-<p>Mouseover to focus on travel to and from a particular city.</p>
- 
+<div id="tooltip">Mouseover to focus on travel to and from a particular city.</div>
  
 <script src="http://d3js.org/d3.v2.min.js?2.8.1"></script>
 <script>
@@ -116,7 +113,7 @@ var chord = svg.selectAll(".chord")
  return cities[d.source.index].name
  + " → " + cities[d.target.index].name
  + ": " + d.source.value
- + "\n" + cities[d.target.index].name
+ + "<br>" + cities[d.target.index].name
  + " → " + cities[d.source.index].name
  + ": " + d.target.value;
  })              
