--- a/airlines/index_tooltip.html
+++ b/airlines/index_tooltip.html
@@ -28,7 +28,7 @@ display: none;
 
 <h1>Airline Passenger Flows in 2014</h1>
 <h3>Top 20 Airports</h3>
-<div id="tooltip" height="40px">Mouseover to focus on travel <br> to and from a particular city.</div>
+<div id="tooltip" height="40px" style="margin-bottom:-10px;">Mouseover to focus on travel <br> to and from a particular city.</div>
  
 <script src="http://d3js.org/d3.v2.min.js?2.8.1"></script>
 <script>
