--- a/airlines/index_tooltip.html
+++ b/airlines/index_tooltip.html
@@ -26,7 +26,7 @@ display: none;
 </style>
  
 
-<h1>Top 20 Airport Passenger Flows in 2014</h1>
+<h3>Top 20 Airports by Passenger Flow in 2014</h3>
 <div id="tooltip" style="height:45px; margin-bottom:-10px;">Mouseover to focus on travel <br> to and from a particular city.</div>
  
 <script src="http://d3js.org/d3.v2.min.js?2.8.1"></script>
