fixing chart.js so that its just the js file

--- a/QBstats/index.html
+++ b/QBstats/index.html
@@ -43,7 +43,7 @@
 
 // Get the context of the canvas element we want to select
 var ctx = document.getElementById("myChart").getContext("2d");
-var myRadarChart = new Chart(ctx).Radar(data, options);
+var myRadarChart = new Chart(ctx).Radar(data);
 
 var data = {
     labels: [ '40yd dash', 'vert jump', 'broad jump', '3 cone drill', '20yd shuttle'],
