fixing chart.js so that its just the js file

--- a/QBstats/index.html
+++ b/QBstats/index.html
@@ -56,7 +56,7 @@ var data = {
             pointStrokeColor: "#fff",
             pointHighlightFill: "#fff",
             pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [5.0, 1.0, 1.0, 5.0, 5.0, 1.0]
+            data: [5.0, 1.0, 1.0, 5.0, 5.0]
         },
         {
             label: "Marcus Mariota",
@@ -66,7 +66,7 @@ var data = {
             pointStrokeColor: "#fff",
             pointHighlightFill: "#fff",
             pointHighlightStroke: "rgba(151,187,205,1)",
-            data: [1.0, 4.5, 4.0, 1.0, 2.0, 2.0]
+            data: [1.0, 4.5, 4.0, 1.0, 2.0]
         },
           {
             label: "Bryce Petty",
@@ -76,7 +76,7 @@ var data = {
             pointStrokeColor: "#fff",
             pointHighlightFill: "#fff",
             pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [4.0, 2.5, 4.0, 2.0, 3.0, 4.0]
+            data: [4.0, 2.5, 4.0, 2.0, 3.0]
         },
         {
             label: "Garret Grayson",
@@ -86,7 +86,7 @@ var data = {
             pointStrokeColor: "#fff",
             pointHighlightFill: "#fff",
             pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [3.0, 2.5, 4.0, 4.0, 4.0, 3.0]
+            data: [3.0, 2.5, 4.0, 4.0, 4.0]
         },
         {
             label: "Brett Hundley",
@@ -96,7 +96,7 @@ var data = {
             pointStrokeColor: "#fff",
             pointHighlightFill: "#fff",
             pointHighlightStroke: "rgba(151,187,205,1)",
-            data: [2.0, 4.5, 2.0, 3.0, 1.0, 5.0]
+            data: [2.0, 4.5, 2.0, 3.0, 1.0]
         }
     ]
 };
