--- a/QBstats/QBs.html
+++ b/QBstats/QBs.html
@@ -40,70 +40,36 @@
 <script src="../Chart.js/Chart.js"></script>
 
 <script>
-
-// Get the context of the canvas element we want to select
-var ctx = document.getElementById("myChart").getContext("2d");
-var myRadarChart = new Chart(ctx).Radar(data, options);
-
-var data = {
-    labels: [ '40yd dash', 'vert jump', 'broad jump', '3 cone drill', '20yd shuttle'],
-    datasets: [
-        {
-            label: "Jameis Winston",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(220,220,220,1)",
-            pointColor: "rgba(220,220,220,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [5.0, 1.0, 1.0, 5.0, 5.0, 1.0]
-        },
-        {
-            label: "Marcus Mariota",
-            fillColor: "rgba(151,187,205,0.2)",
-            strokeColor: "rgba(151,187,205,1)",
-            pointColor: "rgba(151,187,205,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(151,187,205,1)",
-            data: [1.0, 4.5, 4.0, 1.0, 2.0, 2.0]
-        },
-          {
-            label: "Bryce Petty",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(220,220,220,1)",
-            pointColor: "rgba(220,220,220,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [4.0, 2.5, 4.0, 2.0, 3.0, 4.0]
-        },
-        {
-            label: "Garret Grayson",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(220,220,220,1)",
-            pointColor: "rgba(220,220,220,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [3.0, 2.5, 4.0, 4.0, 4.0, 3.0]
-        },
-        {
-            label: "Brett Hundley",
-            fillColor: "rgba(151,187,205,0.2)",
-            strokeColor: "rgba(151,187,205,1)",
-            pointColor: "rgba(151,187,205,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(151,187,205,1)",
-            data: [2.0, 4.5, 2.0, 3.0, 1.0, 5.0]
-        }
-
-
-    ]
-};
-
-
+    var radarChartData = {
+        labels: ["Eating", "Drinking", "Sleeping", "Designing", "Coding", "Cycling", "Running"],
+        datasets: [
+            {
+                label: "My First dataset",
+                fillColor: "rgba(220,220,220,0.2)",
+                strokeColor: "rgba(220,220,220,1)",
+                pointColor: "rgba(220,220,220,1)",
+                pointStrokeColor: "#fff",
+                pointHighlightFill: "#fff",
+                pointHighlightStroke: "rgba(220,220,220,1)",
+                data: [65,59,90,81,56,55,40]
+            },
+            {
+                label: "My Second dataset",
+                fillColor: "rgba(151,187,205,0.2)",
+                strokeColor: "rgba(151,187,205,1)",
+                pointColor: "rgba(151,187,205,1)",
+                pointStrokeColor: "#fff",
+                pointHighlightFill: "#fff",
+                pointHighlightStroke: "rgba(151,187,205,1)",
+                data: [28,48,40,19,96,27,100]
+            }
+        ]
+    };
+    window.onload = function(){
+        window.myRadar = new Chart(document.getElementById("myChart").getContext("2d")).Radar(radarChartData, {
+            responsive: true
+        });
+    }
 </script>
     
     
