--- a/QBstats/QBs.html
+++ b/QBstats/QBs.html
@@ -97,7 +97,10 @@
     };
     window.onload = function(){
         window.myRadar = new Chart(document.getElementById("myChart").getContext("2d")).Radar(radarChartData, {
-            responsive: true
+            responsive: true,
+            
+            legendTemplate : "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<datasets.length; i++){%><li><span style=\"background-color:<%=datasets[i].strokeColor%>\"></span><%if(datasets[i].label){%><%=datasets[i].label%><%}%></li><%}%></ul>"
+
         });
     }
 </script>
