--- a/QBstats/QBs.html
+++ b/QBstats/QBs.html
@@ -99,7 +99,7 @@
         window.myRadar = new Chart(document.getElementById("myChart").getContext("2d")).Radar(radarChartData, {
             responsive: true,
             
-            legendTemplate : "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<datasets.length; i++){%><li><span style=\"background-color:<%=datasets[i].strokeColor%>\"></span>%datasets[i].label%</li></ul>"
+            multiTooltipTemplate: "<%= datasetLabel %> - <%= value %>"
 
         });
     }
