--- a/QBstats/QBs.html
+++ b/QBstats/QBs.html
@@ -101,7 +101,7 @@
 // Get the context of the canvas element we want to select
 var ctx = document.getElementById("myChart").getContext("2d");
 var myNewChart = new Chart(ctx).Radar(radarChartData, {
-           
+            responsive: true,
             
             multiTooltipTemplate: " <%= datasetLabel %> - <%= value %>"
 
