--- a/QBstats/QBs.html
+++ b/QBstats/QBs.html
@@ -24,7 +24,7 @@
         <h2>Top 5 QBs in 2015 Draft</h2>
         
         <p>This is a comparison of the relative ranking of the top 5 drafted Quarterbacks in 2015 on key athletic metrics measured in the combine. 
-        The scores are their relative rankings.
+        The scores are their relative rankings. The full rankings are available through <a href="http://www.nfl.com/draft/2015/tracker?icampaign=draft-sub_nav_bar-drafteventpage-tracker">nfl.com</a>.
         </p>
        
        <div class="large-6 columns">
