initial commit of rent section

--- a/rent/index.html
+++ b/rent/index.html
@@ -6,8 +6,8 @@
     <title>QB Stats</title>
     <link rel="stylesheet" href="../foundation/css/foundation.css" />
     <script src="../foundation/js/vendor/modernizr.js"></script>
-    <link href="nvd3-master/src/nv.d3.min.css" rel="stylesheet">
-    <script src="nvd3-master/src/nv.d3.min.js"></script>
+    <link href="nvd3-master/build/nv.d3.min.css" rel="stylesheet">
+    <script src="nvd3-master/build/nv.d3.min.js"></script>
   </head>
   
   <style>
