--- a/rent/index.html
+++ b/rent/index.html
@@ -6,6 +6,7 @@
     <title>QB Stats</title>
     <link rel="stylesheet" href="../foundation/css/foundation.css" />
     <script src="../foundation/js/vendor/modernizr.js"></script>
+    <script src="http://d3js.org/d3.v2.min.js?2.8.1"></script>
     <link href="nvd3-master/build/nv.d3.min.css" rel="stylesheet">
     <script src="nvd3-master/build/nv.d3.min.js"></script>
   </head>
