--- a/rent/index.html
+++ b/rent/index.html
@@ -9,6 +9,7 @@
     <script src="http://d3js.org/d3.v2.min.js?2.8.1"></script>
     <link href="nvd3-master/build/nv.d3.min.css" rel="stylesheet">
     <script src="nvd3-master/build/nv.d3.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   </head>
   
   <style>
