updated js sources

--- a/rent/index.html
+++ b/rent/index.html
@@ -85,7 +85,7 @@ d3.csv("sample.csv", function(error, data) {
         d.series1 = +d.series1;
         d.series2 = +d.series2
     });
-    console.log(function(d) { return d.date;});
+    console.log(data.date);
 });
 
 
