--- a/rent/index.html
+++ b/rent/index.html
@@ -79,14 +79,15 @@ nv.addGraph(function() {
 });
 
 
-d3.csv("sample.csv", function(error, data) {
+var csv_data = d3.csv("sample.csv", function(error, data) {
     data.forEach(function(d) {
         d.date = +d.date;
         d.series1 = +d.series1;
         d.series2 = +d.series2
     });
-    console.log(data.date);
 });
+
+console.log(csv_data)
 
 
 /**************************************
