--- a/rent/index.html
+++ b/rent/index.html
@@ -79,11 +79,13 @@ nv.addGraph(function() {
 });
 
 
-var csv_data = d3.csv("sample.csv", function(error, data) {
+var csv_data;
+d3.csv("sample.csv", function(error, data) {
     data.forEach(function(d) {
         d.date = +d.date;
         d.series1 = +d.series1;
         d.series2 = +d.series2
+        csv_data = data;
     });
 });
 
