--- a/rent/index.html
+++ b/rent/index.html
@@ -47,6 +47,17 @@
 
 <script>
 
+
+d3.csv("sample.csv", function(error, data) {
+    data.forEach(function(d) {
+        d.date = +d.date;
+        d.series1 = +d.series1;
+        d.series2 = +d.series2
+    });
+
+
+console.log(data);
+
  /*These lines are all chart setup.  Pick and choose which chart features you want to utilize. */
 nv.addGraph(function() {
   var chart = nv.models.lineChart()
@@ -79,17 +90,8 @@ nv.addGraph(function() {
 });
 
 
-var csv_data;
-d3.csv("sample.csv", function(error, data) {
-    data.forEach(function(d) {
-        d.date = +d.date;
-        d.series1 = +d.series1;
-        d.series2 = +d.series2
-        csv_data = data;
-    });
-});
 
-console.log(csv_data)
+
 
 
 /**************************************
@@ -127,7 +129,10 @@ function sinAndCos() {
     }
   ];
 }
-   
+
+});
+
+
 </script>
     
     
