--- a/rent/index.html
+++ b/rent/index.html
@@ -97,39 +97,34 @@ nv.addGraph(function() {
 /**************************************
  * Simple test data generator
  */
-function sinAndCos() {
-  var sin = [],sin2 = [],
-      cos = [];
+function getdata() {
+  var series1 = [],series2 = [];
 
   //Data is represented as an array of {x,y} pairs.
-  for (var i = 0; i < 100; i++) {
-    sin.push({x: i, y: Math.sin(i/10)});
-    sin2.push({x: i, y: Math.sin(i/10) *0.25 + 0.5});
-    cos.push({x: i, y: .5 * Math.cos(i/10)});
+  for (var i = 0; i < data.length; i++) {
+    series1.push({x: data.date[i], y: data.series1[i]});
+    series2.push({x: data.date[i], y: data.series2[i]});
   }
 
 
   //Line chart data should be sent as an array of series objects.
   return [
     {
-      values: sin,      //values - represents the array of {x,y} data points
-      key: 'Sine Wave', //key  - the name of the series.
+      values: serie1,      //values - represents the array of {x,y} data points
+      key: 'Series 1', //key  - the name of the series.
       color: '#ff7f0e'  //color - optional: choose your own line color.
     },
     {
-      values: cos,
-      key: 'Cosine Wave',
+      values: series2,
+      key: 'Series 2',
       color: '#2ca02c'
     },
-    {
-      values: sin2,
-      key: 'Another sine wave',
-      color: '#7777ff',
-      area: true      //area - set to true if you want this line to turn into a filled area chart.
-    }
+
   ];
 }
 
+
+//end d3.csv callback function
 });
 
 
