--- a/rent/index.html
+++ b/rent/index.html
@@ -78,7 +78,7 @@ nv.addGraph(function() {
       .tickFormat(d3.format('.02f'));
 
   /* Done setting the chart up? Time to render it!*/
-  var myData = sinAndCos();   //You need data...
+  var myData = getdata();   //You need data...
 
   d3.select('#chart svg')    //Select the <svg> element you want to render the chart in.   
       .datum(myData)         //Populate the <svg> element with chart data...
