--- a/rent/index.html
+++ b/rent/index.html
@@ -58,6 +58,8 @@ d3.csv("sample.csv", function(error, data) {
 
 console.log(data);
 
+console.log(data.date[0]);
+
  /*These lines are all chart setup.  Pick and choose which chart features you want to utilize. */
 nv.addGraph(function() {
   var chart = nv.models.lineChart()
