updated js sources

--- a/rent/index.html
+++ b/rent/index.html
@@ -58,7 +58,7 @@ d3.csv("sample.csv", function(error, data) {
 
 console.log(data);
 
-console.log(data[0].date[0]);
+console.log(data[0]);
 
  /*These lines are all chart setup.  Pick and choose which chart features you want to utilize. */
 nv.addGraph(function() {
