--- a/rent/index.html
+++ b/rent/index.html
@@ -104,7 +104,7 @@ function getdata() {
 
   //Data is represented as an array of {x,y} pairs.
   for (var i = 0; i < data.length; i++) {
-    series1.push({x: data[i].date[, y: data[i].series1});
+    series1.push({x: data[i].date, y: data[i].series1});
     series2.push({x: data[i].date, y: data[i].series2});
   }
 
