updated js sources

--- a/rent/index.html
+++ b/rent/index.html
@@ -112,7 +112,7 @@ function getdata() {
   //Line chart data should be sent as an array of series objects.
   return [
     {
-      values: serie1,      //values - represents the array of {x,y} data points
+      values: series1,      //values - represents the array of {x,y} data points
       key: 'Series 1', //key  - the name of the series.
       color: '#ff7f0e'  //color - optional: choose your own line color.
     },
