working with DC neighborhood data

--- a/rent/index.html
+++ b/rent/index.html
@@ -14,8 +14,9 @@
   
   <style>
 
-/* SVG styling */
-
+#chart svg {
+  height: 800px;
+}
 
 </style>
 
@@ -32,7 +33,7 @@
        
        <div class="large-8 columns">
             <div id="chart">
-                <svg> </svg>
+                <svg></svg>
             </div>
        </div>
         
